PointLights, SpotLights, Logging
Added spot and point lights, added logging to all files (in the pch)

fixed issues with camera updating and incorrect view angles. Decided on right hand coordinate system

--- a/OpenGL Boilerplate.vcxproj.filters
+++ b/OpenGL Boilerplate.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="src\engine\graphics\lights\DirectionalLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\engine\graphics\lights\SpotLight.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\engine\objects\Object.h">
@@ -156,6 +159,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\engine\graphics\lights\DirectionalLight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\graphics\lights\SpotLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
