--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,9 @@ StyleCopReport.xml
 *.svclog
 *.scc
 
+# Don't ignore mesh obj files
+!src/resources/models/**/*.obj
+
 # Chutzpah Test files
 _Chutzpah*
 
