--- a/OpenGL Boilerplate.vcxproj
+++ b/OpenGL Boilerplate.vcxproj
@@ -87,11 +87,15 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>Includes.h</PrecompiledHeaderFile>
+      <PreprocessorDefinitions>DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>glfw3.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy /Y $(SolutionDir)Dependancies\assimp-vc142-mtd.dll $(TargetDir)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -121,6 +125,9 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>glfw3.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy /Y $(SolutionDir)Dependancies\assimp-vc142-mtd.dll $(TargetDir)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -143,12 +150,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\engine\common\Log.cpp" />
-    <ClCompile Include="src\engine\graphics\error\Glerror.cpp" />
     <ClCompile Include="src\engine\graphics\lights\DirectionalLight.cpp" />
     <ClCompile Include="src\engine\graphics\lights\Light.cpp" />
     <ClCompile Include="src\engine\graphics\lights\PointLight.cpp" />
     <ClCompile Include="src\engine\graphics\lights\SpotLight.cpp" />
     <ClCompile Include="src\engine\graphics\renderer\Renderer.cpp" />
+    <ClCompile Include="src\engine\platform\opengl\OpenGLAPI.cpp" />
     <ClCompile Include="src\engine\precompiled header\Includes.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Includes.h</PrecompiledHeaderFile>
@@ -176,12 +183,12 @@
   <ItemGroup>
     <ClInclude Include="Dependancies\Includes\stb_image\stb_image.h" />
     <ClInclude Include="src\engine\common\Log.h" />
-    <ClInclude Include="src\engine\graphics\error\Glerror.h" />
     <ClInclude Include="src\engine\graphics\lights\DirectionalLight.h" />
     <ClInclude Include="src\engine\graphics\lights\Light.h" />
     <ClInclude Include="src\engine\graphics\lights\PointLight.h" />
     <ClInclude Include="src\engine\graphics\lights\SpotLight.h" />
     <ClInclude Include="src\engine\graphics\renderer\Renderer.h" />
+    <ClInclude Include="src\engine\platform\opengl\OpenGLAPI.h" />
     <ClInclude Include="src\engine\precompiled header\Includes.h" />
     <ClInclude Include="src\engine\common\Path.h" />
     <ClInclude Include="src\engine\import manager\ImportManager.h" />
