--- a/OpenGL Boilerplate.vcxproj.filters
+++ b/OpenGL Boilerplate.vcxproj.filters
@@ -90,7 +90,7 @@
     <ClCompile Include="src\engine\graphics\lights\SpotLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\engine\graphics\error\Glerror.cpp">
+    <ClCompile Include="src\engine\platform\opengl\OpenGLAPI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -167,7 +167,7 @@
     <ClInclude Include="src\engine\graphics\lights\SpotLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\graphics\error\Glerror.h">
+    <ClInclude Include="src\engine\platform\opengl\OpenGLAPI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
